# 2PC

./: .gitignore  CMakeLists.txt  README.md  ahe.h  client.cpp  data_trans.h  module.cpp  module.h  module.sh  role.h  server.cpp
libtorch_test/: CMakeLists.txt  libtorch_test.cpp  libtorch_test.sh
protobuf_test/: CMakeLists.txt  protobuf_test.cpp  protobuf_test.pb.cc  protobuf_test.pb.h  protobuf_test.proto  protobuf_test.sh
pytorch_test/: pytorch_test.py
pytorch_test/models/cnn_mnist/: mnist_net.pt  mnist_net.pth  mnist_net10+20.pt
test1/: test.cpp
